--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .header {
             text-align: center;
             padding: 40px;
-            background: url('https://i.imgur.com/3sXhJ9c.png') center/contain no-repeat;
+            background: url('https://i.imgur.com/h3ki5mi.jpeg') center/contain no-repeat;
             position: relative;
         }
 
@@ -95,19 +95,19 @@
 
         <div class="meme-section">
             <div class="meme-card">
-                <img src="https://i.imgur.com/5VpQ3B3.png" width="200" alt="Capy Meme 1">
+                <img src="https://i.imgur.com/tG5DHgB.jpeg" width="200" alt="Capy Meme 1">
                 <p class="meme-text">When you HODL through the dip</p>
                 <div class="rainbow-text">CHILL LEVEL: MAXIMUM</div>
             </div>
 
             <div class="meme-card">
-                <img src="https://i.imgur.com/r9LbCwB.png" width="200" alt="Capy Meme 2">
+                <img src="https://i.imgur.com/MXWEU8U.jpeg" width="200" alt="Capy Meme 2">
                 <p class="meme-text">Me checking the market vs me not caring</p>
                 <div class="rainbow-text">LAZY MODE ACTIVATED</div>
             </div>
 
             <div class="meme-card">
-                <img src="https://i.imgur.com/mXwFjzQ.png" width="200" alt="Capy Meme 3">
+                <img src="https://i.imgur.com/f1hib6K.jpeg" width="200" alt="Capy Meme 3">
                 <p class="meme-text">When someone says "work"</p>
                 <div class="rainbow-text">NOPE.avi</div>
             </div>
