--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
         <div class="header">
             <h1>🦝 LAZY CAPY 🚀</h1>
-            <img src="https://i.imgur.com/Z1Dz2Gv.png" class="capy-img" alt="Chill Capybara">
+            <img src="https://i.imgur.com/8teoMkD.png" class="capy-img" alt="Chill Capybara">
             <div class="floating-coconut" style="top: 50px; left: 100px;">🥥</div>
             <div class="floating-coconut" style="top: 80px; right: 150px;">🥥</div>
         </div>
